--- a/Lotus.Account.Web/Lotus.Account.Web.csproj
+++ b/Lotus.Account.Web/Lotus.Account.Web.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Lotus.Account</RootNamespace>
     <Configurations>Debug;Release;Publish</Configurations>
     <OutputPath>..\Output\$(Configuration)\</OutputPath>
@@ -14,15 +14,17 @@
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
     <Version>1.0.0</Version>
-    <Title>Lotus.Account</Title>
+    <Title>Lotus.Account.Web</Title>
     <PackageTags></PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Description>Модуль учетной записи пользователя</Description>
+    <Description>Модуль WebApi учетной записи пользователя</Description>
     <PackageReadmeFile>Readme.md</PackageReadmeFile>
     <PackageIcon>IconTemplate.png</PackageIcon>
     <PackageIconUrl />
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <NoWarn>1587,1591</NoWarn>
+    <OutputType>Library</OutputType>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -40,21 +42,31 @@
   <ItemGroup Condition="'$(Configuration)' == 'Publish'">
     <PackageReference Include="Lotus.Core" Version="1.9.1" />
     <PackageReference Include="Lotus.Repository" Version="1.9.1" />
+    <PackageReference Include="Lotus.Web.Common" Version="1.9.1" />
+    <PackageReference Include="Lotus.Account" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(Configuration)' != 'Publish'">
     <ProjectReference Include="..\..\Lotus.Basis\Lotus.Core\Lotus.Core.csproj" />
     <ProjectReference Include="..\..\Lotus.Basis\Lotus.Repository\Lotus.Repository.csproj" />
+    <ProjectReference Include="..\..\Lotus.Web\Lotus.Web.Common\Lotus.Web.Common.csproj" />
+    <ProjectReference Include="..\Lotus.Account\Lotus.Account.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityModel" Version="6.1.0" />
+    <PackageReference Include="UAParser" Version="3.1.47" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
-    <PackageReference Include="OpenIddict.Abstractions" Version="4.6.0" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.32.1" />
+    <PackageReference Include="OpenIddict" Version="4.5.0" />
+    <PackageReference Include="OpenIddict.AspNetCore" Version="4.5.0" />
+    <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="4.5.0" />
+    <PackageReference Include="OpenIddict.EntityFrameworkCore.Models" Version="4.5.0" />
+    <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="4.5.0" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Source\Features\Notification\" />
-  </ItemGroup>
+  <Target Name="PublishToNuget" Condition="'$(Configuration)'=='Publish'" AfterTargets="Build">
+    <Message Text="Создание пакета Nuget:" Importance="high" />
+    <Exec Command="dotnet pack Lotus.Account.Web.csproj --no-build -c Publish" />
+  </Target>
 
 </Project>
