--- a/Lotus.Account.WebApp/Properties/launchSettings.json
+++ b/Lotus.Account.WebApp/Properties/launchSettings.json
@@ -6,29 +6,29 @@
         "anonymousAuthentication": true,
         "iisExpress":
         {
-            "applicationUrl": "http://localhost:29657",
-            "sslPort": 44347
+            "applicationUrl": "http://localhost:63254",
+            "sslPort": 44321
         }
     },
     "profiles":
     {
-        "WebApi":
+        "WebApp":
         {
             "commandName": "Project",
             "dotnetRunMessages": true,
             "launchBrowser": false,
-            "applicationUrl": "https://localhost:5000;http://localhost:5001",
+            "launchUrl": "swagger",
+            "applicationUrl": "https://localhost:5000",
             "environmentVariables":
             {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             }
         },
-        "Swagger":
+        "IIS Express":
         {
             "commandName": "IISExpress",
             "launchBrowser": true,
             "launchUrl": "swagger",
-            "applicationUrl": "https://localhost:5000;http://localhost:5001",
             "environmentVariables":
             {
                 "ASPNETCORE_ENVIRONMENT": "Development"
