--- a/Lotus.Account.WebApp/appsettings.Development.json
+++ b/Lotus.Account.WebApp/appsettings.Development.json
@@ -11,6 +11,6 @@
 
     "ConnectionStrings":
     {
-        "UserDb": "Host=localhost;Database=denova;Username=postgres;Password=1234"
+        "UserDb": "Host=localhost;Database=account;Username=postgres;Password=1234"
     }
 }
