--- a/Lotus.Account.WebApp/appsettings.json
+++ b/Lotus.Account.WebApp/appsettings.json
@@ -12,6 +12,6 @@
 
     "ConnectionStrings":
     {
-        "UserDb": "Host=localhost;Database=denova;Username=postgres;Password=1234"
+        "UserDb": "Host=localhost;Database=account;Username=postgres;Password=1234"
     }
 }
